--- a/package.json
+++ b/package.json
@@ -83,8 +83,9 @@
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.5",
     "axios": "^0.21.2",
-    "bootstrap": "^4.1.1",
+    "bootstrap": "^4.6.2",
     "classnames": "^2.2.6",
+    "dotenv-webpack": "^8.0.1",
     "esri-loader": "^3.5.0",
     "helper-toolkit-ts": "^1.1.13",
     "react": "^18.1.0",
