--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "dotenv-webpack": "^8.0.1",
     "esri-loader": "^3.5.0",
     "helper-toolkit-ts": "^1.1.13",
+    "joi-browser": "^13.4.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-redux": "^8.0.2",
