--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,8 @@
 {
     "compilerOptions": {
+        "paths": {
+            "@/*":["./src/*"]
+        },
         "allowSyntheticDefaultImports": true,
         "allowJs": false,
         "jsx": "react",
