--- a/package.json
+++ b/package.json
@@ -40,13 +40,15 @@
     "@babel/runtime": "^7.14.6",
     "@types/classnames": "^2.2.10",
     "@types/jest": "^26.0.15",
+    "@types/node": "^20.2.3",
+    "@types/react-anchor-link-smooth-scroll": "^1.0.2",
     "@types/react-redux": "^7.1.16",
     "@types/react-responsive": "^8.0.2",
     "@types/redux-mock-store": "^1.0.3",
     "@typescript-eslint/eslint-plugin": "^5.33.1",
     "@typescript-eslint/parser": "^5.33.1",
     "@vue/preload-webpack-plugin": "^2.0.0",
-    "autoprefixer": "^10.2.6",
+    "autoprefixer": "^10.4.14",
     "babel-loader": "^8.2.2",
     "copy-webpack-plugin": "^9.0.0",
     "css-loader": "^5.2.6",
@@ -63,21 +65,22 @@
     "jest": "^26.6.3",
     "lint-staged": "^13.0.3",
     "mini-css-extract-plugin": "^1.6.0",
-    "postcss": "^8.3.5",
+    "postcss": "^8.4.23",
     "postcss-loader": "^6.1.0",
     "postcss-preset-env": "^6.7.0",
     "prettier": "^2.7.1",
     "source-map-loader": "^3.0.0",
-    "tailwindcss": "^3.0.24",
+    "tailwindcss": "^3.3.2",
     "terser-webpack-plugin": "^5.1.3",
     "typescript": "^4.3.4",
     "url-loader": "^4.1.1",
-    "webpack": "5.73",
+    "webpack": "^5.83.1",
     "webpack-bundle-analyzer": "^4.4.2",
     "webpack-cli": "4.10",
     "webpack-dev-server": "^4.9.3"
   },
   "dependencies": {
+    "@heroicons/react": "^2.0.18",
     "@reduxjs/toolkit": "1.8",
     "@types/arcgis-js-api": "^4.23.1",
     "@types/react": "^18.0.9",
@@ -86,8 +89,10 @@
     "bootstrap": "^4.1.1",
     "classnames": "^2.2.6",
     "esri-loader": "^3.5.0",
+    "framer-motion": "^10.12.12",
     "helper-toolkit-ts": "^1.1.13",
     "react": "^18.1.0",
+    "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-dom": "^18.1.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.11.1",
