--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
     "joi-browser": "^13.4.0",
     "react": "^18.1.0",
     "react-anchor-link-smooth-scroll": "^1.0.12",
+    "react-cookie": "^4.1.1",
     "react-dom": "^18.1.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.11.1",
