--- a/package.json
+++ b/package.json
@@ -99,6 +99,7 @@
     "react-dom": "^18.1.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.11.1",
+    "react-select": "^5.7.3",
     "redux": "^4.1.0"
   },
   "browserslist": [
