--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "webpack-dev-server": "^4.9.3"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.4.0",
     "@heroicons/react": "^2.0.18",
     "@reduxjs/toolkit": "1.8",
     "@types/arcgis-js-api": "^4.23.1",
@@ -90,6 +91,7 @@
     "classnames": "^2.2.6",
     "dotenv-webpack": "^8.0.1",
     "esri-loader": "^3.5.0",
+    "fontawesome": "^5.6.3",
     "framer-motion": "^10.12.12",
     "helper-toolkit-ts": "^1.1.13",
     "joi-browser": "^13.4.0",
