--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "webpack-dev-server": "^4.9.3"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.4.0",
     "@heroicons/react": "^2.0.18",
     "@reduxjs/toolkit": "1.8",
     "@types/arcgis-js-api": "^4.23.1",
