--- a/package.json
+++ b/package.json
@@ -101,7 +101,8 @@
     "react-dom": "^18.1.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.11.1",
-    "redux": "^4.1.0"
+    "redux": "^4.1.0",
+    "style-loader": "^3.3.3"
   },
   "browserslist": [
     "defaults"
