--- a/package.json
+++ b/package.json
@@ -81,7 +81,6 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.4.0",
-    "@fortawesome/fontawesome-free": "^6.4.0",
     "@heroicons/react": "^2.0.18",
     "@reduxjs/toolkit": "1.8",
     "@types/arcgis-js-api": "^4.23.1",
@@ -103,7 +102,8 @@
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.11.1",
     "react-select": "^5.7.3",
-    "redux": "^4.1.0"
+    "redux": "^4.1.0",
+    "style-loader": "^3.3.3"
   },
   "browserslist": [
     "defaults"
