--- a/package.json
+++ b/package.json
@@ -99,6 +99,7 @@
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-cookie": "^4.1.1",
     "react-dom": "^18.1.0",
+    "react-hook-form": "^7.44.3",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.11.1",
     "react-select": "^5.7.3",
