--- a/package.json
+++ b/package.json
@@ -100,6 +100,7 @@
     "framer-motion": "^10.12.12",
     "helper-toolkit-ts": "^1.1.13",
     "joi-browser": "^13.4.0",
+    "mui-datatables": "^4.3.0",
     "react": "^18.1.0",
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-cookie": "^4.1.1",
@@ -107,6 +108,7 @@
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.11.1",
     "react-select": "^5.7.3",
+    "react-virtuoso": "^4.4.2",
     "redux": "^4.1.0",
     "style-loader": "^3.3.3"
   },
