--- a/package.json
+++ b/package.json
@@ -94,6 +94,7 @@
     "axios": "^0.21.2",
     "bootstrap": "^4.6.2",
     "classnames": "^2.2.6",
+    "countries-list": "^2.6.1",
     "dotenv-webpack": "^8.0.1",
     "esri-loader": "^3.5.0",
     "fontawesome": "^5.6.3",
@@ -107,7 +108,7 @@
     "react-dom": "^18.1.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.11.1",
-    "react-select": "^5.7.3",
+    "react-select": "^5.7.4",
     "react-virtuoso": "^4.4.2",
     "redux": "^4.1.0",
     "style-loader": "^3.3.3"
