--- a/package.json
+++ b/package.json
@@ -81,12 +81,10 @@
     "webpack-dev-server": "^4.9.3"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
     "@fortawesome/fontawesome-free": "^6.4.0",
     "@heroicons/react": "^2.0.18",
     "@mui/icons-material": "^5.14.1",
-    "@mui/material": "^5.14.1",
+    "@mui/x-date-pickers": "^6.10.2",
     "@reduxjs/toolkit": "1.8",
     "@types/arcgis-js-api": "^4.23.1",
     "@types/react": "^18.0.9",
@@ -105,6 +103,7 @@
     "react": "^18.1.0",
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-cookie": "^4.1.1",
+    "react-datepicker": "^4.16.0",
     "react-dom": "^18.1.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.11.1",
