--- a/package.json
+++ b/package.json
@@ -82,6 +82,9 @@
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^6.4.0",
+        "@fortawesome/fontawesome-svg-core": "^6.4.2",
+        "@fortawesome/free-solid-svg-icons": "^6.4.2",
+        "@fortawesome/react-fontawesome": "^0.2.0",
         "@heroicons/react": "^2.0.18",
         "@mui/icons-material": "^5.14.1",
         "@mui/material": "^5.14.1",
