--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
         "@heroicons/react": "^2.0.18",
         "@mui/icons-material": "^5.14.1",
         "@mui/material": "^5.14.1",
+        "@mui/x-date-pickers": "^6.11.1",
         "@reduxjs/toolkit": "1.8",
         "@types/arcgis-js-api": "^4.23.1",
         "@types/react": "^18.0.9",
@@ -93,6 +94,7 @@
         "bootstrap": "^4.6.2",
         "classnames": "^2.2.6",
         "countries-list": "^2.6.1",
+        "dayjs": "^1.11.9",
         "dotenv-webpack": "^8.0.1",
         "esri-loader": "^3.5.0",
         "fontawesome": "^5.6.3",
