--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
         "@babel/preset-react": "^7.14.5",
         "@babel/preset-typescript": "^7.14.5",
         "@babel/runtime": "^7.14.6",
+        "@iconify/icons-ph": "^1.2.4",
+        "@iconify/react": "^4.1.1",
         "@types/classnames": "^2.2.10",
         "@types/jest": "^26.0.15",
         "@types/node": "^20.2.3",
