--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
         "@babel/preset-react": "^7.14.5",
         "@babel/preset-typescript": "^7.14.5",
         "@babel/runtime": "^7.14.6",
+        "@iconify/icons-fluent-emoji-high-contrast": "^1.2.6",
         "@iconify/icons-ph": "^1.2.4",
         "@iconify/react": "^4.1.1",
         "@types/classnames": "^2.2.10",
